# owntelemetry

./: .gitignore  README.md  booklet.md
examples/: mqtt_client.conf.example  mqtt_client.py  mqtt_server.conf.example  mqtt_server.py  requirements.txt
lib/python/: README.md  pyproject.toml
lib/python/owntelemetry/: __init__.py  _profile.py
profiles/: 0.json  0.md  1.json  1.md  10.json  10.md  2.json  2.md  3.json  3.md  4.json  4.md  5.json  5.md  51.json  51.md  52.json  52.md  6.json  6.md  7.json  7.md  8.json  8.md  9.json  9.md
